[package]
name = "very_light"
version = "0.2.0"
edition = "2018"

[[bin]]
name = "pchain"

[dependencies]
anyhow = "1.0"
clap = {version = "3.1.5", features = ["derive"]}
home = "0.5"
tokio = {version = "1", features = ["full"]}
reqwest = {version = "0.11", features = ["json"]}
sha2 = "0.10"
protocol_types = { path = "../protocol_types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0"
base64 = "0.13"
borsh = "0.9"
regex = "1.5"
# It still uses old version of rand(v0.7). 
ed25519-dalek = "1.0.1"
# ed25519-dalek requires rand(v0.7)
rand = "0.7"
# rand_chacha requires rand (v0.7) to operate
rand_chacha = "0.2"